--- a/YOUWAA/TileVania/Assembly-CSharp.csproj
+++ b/YOUWAA/TileVania/Assembly-CSharp.csproj
@@ -61,6 +61,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\Enemy.cs" />
     <Compile Include="Assets\Scripts\PlayerControls.cs" />
     <Reference Include="UnityEditor.StandardEvents">
       <HintPath>C:/Repos/GitHub/YOUWA/YOUWAA/TileVania/Library/ScriptAssemblies/UnityEditor.StandardEvents.dll</HintPath>
